--- a/cursoshtml/index.html
+++ b/cursoshtml/index.html
@@ -7,5 +7,7 @@
 <body>
     <h1>TESTE DE HTML</h1>
     <p>meu primeiro codigo com visual studio code</p>
+    <p>meu primeiro codigo com visual studio code</p>
+
 </body>
 </html>
